viewing_projects feature ok

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,4 @@
 <form action="<%= projects_path -%>" method="post" accept-charset="utf-8">
-  <input type="text" name="Name" />
+  <input type="text" name="name" />
   <input type="submit" name="submit" value="Create Project">
 </form>
