--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,1 +1,8 @@
 <%= link_to "New Project", new_project_path %>
+
+<h2>Projects</h2>
+<ul>
+  <% @projects.each do |p| -%>
+    <li><%= link_to(p.name, p) -%></li>
+  <% end -%> 
+</ul>
