--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,8 @@
-<h2>show: <%= @project.name %></h2>
+<h2>SHOW: <%= @project.name %></h2>
 
 <h3 id="info">
   <%= flash[:notice] -%> 
 </h3>
+
+<div><%= link_to("Edit Project", edit_project_path(@project)) -%></div>
+<div><%= link_to("Delete Project", project_path(@project), :method => :delete, :confirm => "Are you sure?") -%></div>
