Implemented many tickets features

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,18 @@
 </head>
 <body>
 
+<% flash.each do |key, val| -%>
+  <div class="flash" id="<%= key -%>">
+    <% if(val.class == Array) -%>
+      <%= render(:partial => "parts/errors", :locals => {:error_msg => val || []} ) -%> 
+    <% else -%>
+      <%= val -%> 
+    <% end -%> 
+  </div>
+<% end -%> 
+
+<h1><%= link_to "Ticketee", root_path %></h1>
+
 <%= yield %>
 
 </body>
