--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,9 +1,7 @@
-<!-- <form action="<%= projects_path -%>" method="post" accept-charset="utf-8">
-  <input type="text" name="name" />
-  <input type="submit" name="submit" value="Create Project">
-</form> -->
 
-<%= form_for(@project) do |f| -%> 
+
+<%= form_for(@project) do |f| -%>
+  <%= f.error_messages -%>
   <p>
     <%= f.label(:name) -%> 
     <%= f.text_field(:name) -%> 
