--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,10 +1,3 @@
-<h2>new: New project</h2>
-
-<h3 id="info">
-  <%= flash[:alert] -%>
-  <% if(flash[:msg]) -%> 
-    <%= "Name #{flash[:msg]}" -%>
-  <% end -%> 
-</h3>
+<h2>New project</h2>
 
 <%= render "form" %>
